--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-scrollbars": "^1.1.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
