--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-select-country-list": "^2.2.3",
     "react-shimmer-effects": "^1.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
