--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "chart.js": "^4.4.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
     "rc-scrollbars": "^1.1.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-payment-inputs": "^1.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
